agregado de formulario

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="contenedor_home">
             <div class="pagina__titulo">
                 <div class="titulo">
-                    <h1>Bienvenidos a Petit Bocatto</h1>
+                    <h1>Bienvenidos a <p class="letra_logo">Petit Bocatto</p></h1>
                 </div>
                 <!--Imagen deslizables-->
                 <div class="imagen_inicio">
