--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -38,26 +38,36 @@
                     <div>
                         <h1>Quiero mi presupuesto</h1>
                     </div>
-                    
+
                 </div>
             </div>
-            <div class="formulario">
-                <p>Nombre</p>
-                <p>Mail</p>
-                <p>Telefono</p>
-                <p>Text Area</p>
-                <button>
+            <!-- conecto el formulario con mi archivo php para darle fucnionalidad-->
+            <!-- Formlario tomado de  https://freefrontend.com/css-contact-forms/-->
+            <form action="../form.php" method="post" class="form speaker-form">
+
+                <div class="secondaryTitle titulo">Por favor ingresa tus datos.</div>
+                <input type="text" id="nombre" class="name formEntry" placeholder="Nombre" />
+                <input type="text" id="email" class="email formEntry" placeholder="Email" />
+                <input type="tel" id="tel" class="tel formEntry" placeholder="Telefono" />
+
+                <textarea class="message formEntry" placeholder="Mensaje"></textarea>
+                <!-- boton obtenido de https://cssbuttons.io/-->
+                <button class="submit formEntry" onclick="thanks()" type="submit">
                     <div class="svg-wrapper-1">
-                      <div class="svg-wrapper">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                          <path fill="none" d="M0 0h24v24H0z"></path>
-                          <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"></path>
-                        </svg>
-                      </div>
+                        <div class="svg-wrapper">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                                <path fill="none" d="M0 0h24v24H0z"></path>
+                                <path fill="currentColor"
+                                    d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z">
+                                </path>
+                            </svg>
+                        </div>
                     </div>
                     <span>Enviar</span>
-                  </button>
-            </div>
+                </button>
+
+            </form>
+
         </div>
 
         <div class="footer">
