--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,121 +10,164 @@
 
     <!-- CSS-->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <div class="contenedor_padre">
-        <div class="header">
+    <div class="header">
 
-            <div class="header_logo">
-                <img src="multimedia/imagenes/logo.png" alt="">
-            </div>
-
-
-
-
-            <!-- Menú principal>-->
-            <nav class="header_menu">
-                <ul class="menu">
-                    <li class="menu_item"><a id="inicio" href="index.html">Inicio</a></li>
-                    <li class="menu_item">
-                        <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                        <a href="#acercadenosotros">Acerca de Nosotros</a>
-                    </li>
-                    <li class="menu_item"> <a href="paginas/galeria.html">Galeria de Trabajos</a></li>
-                    <li class="menu_item"><a href="paginas/productos.html">Productos</a></li>
-                    <li class="menu_item"><a href="paginas/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-            <!-- Cierre del Menú-->
+        <div class="header_logo">
+            <img src="multimedia/imagenes/logo.png" alt="">
         </div>
+        <!-- NAV BAR -->
 
-        <div class="contenedor_home">
-            <div class="pagina__titulo">
-                <div class="titulo">
-                    <h1>Bienvenidos a <p class="letra_logo">Petit Bocatto</p></h1>
-                </div>
-                <!--Imagen deslizables-->
-                <div class="imagen_inicio">
-                    <img class="carrusel" src="multimedia/imagenes/rogel.jpeg" alt="">
-                </div>
-            </div>
 
-        </div>
-        <div class="acercadenosotros_cont" id="acercadenosotros">
-            <div>
-                <div class="acercanos_titulo">
-                    <h2>Acerca de Nosotros</h2>
-                </div>
-                <div class="acercannos_enunciado">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dignissimos, aliquam cupiditate
-                        ea,
-                        quibusdam quaerat non facere beatae quis ab harum architecto nulla odit veniam iure reiciendis
-                        illum,
-                        numquam totam?
-                        Illum esse, ab dolor perspiciatis eaque tenetur laudantium perferendis reprehenderit, quia aut
-                        soluta
-                        quaerat rem quasi impedit minima sunt repellendus illo itaque adipisci in non, magni nam
-                        repudiandae
-                        id!
-                        Suscipit!
-                        Laborum voluptate maxime ducimus dolores, ratione delectus quaerat ipsa consequatur nesciunt a
-                        impedit
-                        aut
-                        modi labore, itaque eveniet nulla earum exercitationem! Quasi blanditiis nobis eos voluptatum
-                        aperiam
-                        consequuntur omnis beatae.</p>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-light navbar-left header_menu" style="justify-content: flex-end">
+            <div class="container-fluid" style="justify-content: flex-end">
 
-            </div>
-
-        </div>
-
-        <div class="footer">
-            <!--comienza el footer-->
-            <div class="footer-container">
-                <div class="footerIzq">
-                    <ul>
-                        <li class="footer__iconos__izq">
-                            <a href="https://www.instagram.com/petit.bocatto"> <img class="logo_contacto_footer"
-                                    src="multimedia/imagenes/instagram.png" alt=""></a>
+                <button class="navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav menu d-flex justify-content-right">
+                        <!-- <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li> -->
+                        <li class="menu_item"><a id="inicio" href="index.html">Inicio</a></li>
+                        <li class="menu_item">
+                            <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
+                            <a href="#acercadenosotros">Acerca de Nosotros</a>
                         </li>
-                        <li class="footer__iconos__izq">
-                            <a href="https://www.facebook.com/petit.bocatto.7"> <img class="logo_contacto_footer"
-                                    src="multimedia/imagenes/facebook.png" alt=""></a>
-                        </li>
+                        <li class="menu_item"> <a href="paginas/galeria.html">Galeria de Trabajos</a></li>
+                        <li class="menu_item"><a href="paginas/productos.html">Productos</a></li>
+                        <li class="menu_item"><a href="paginas/contacto.html">Contacto</a></li>
+
 
                     </ul>
                 </div>
-                <!-- Logo que va centrado en el pie de pagina-->
-                <div class="logoFooter">
-                    <a href="#inicio"><img id="logo_petit_footer" src="multimedia/imagenes/logo.png" alt=""
-                            width=""></a>
-
-                </div>
-                <div class="footerDer">
-                    <ul>
-                        <li class="footer__iconos__der">
-                            <a href="https://goo.gl/maps/6eGbhzfFqPH5duuc7"> Corneille 4071 <img class="logo_contacto_footer"
-                                    src="multimedia/imagenes/pin_mapa.png" alt="">
-                                </a>
-                        </li>
-                        <li class="footer__iconos__der">
-                            <a href="">091 999 999<img class="logo_contacto_footer" src="multimedia/imagenes/telefono-movil.png" alt="">
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
             </div>
+        </nav>
 
-
-        </div>
-        <!--termina el footer-->
-
+        <!-- TERMINA EL NAV BAR-->
     </div>
+    <section class="container">
 
+        <div class="pagina__titulo">
+            <div class="titulo">
+                <h1>Bienvenidos a <p class="letra_logo" style="font-size: 5rem;">Petit Bocatto</p>
+                </h1>
+            </div>
+        </div>
 
+        <div class="row">
+
+        </div>
+        <div class="row">
+            <!--  Empieza Carousel-->
+            <div class="col d-flex justify-content-center mb-5">
+                <div id="carouselExampleControls" class="carousel slide w-50 " data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="multimedia/imagenes/chaja.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="multimedia/imagenes/bombon-choco50.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="multimedia/imagenes/frutos-rojos.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+
+            </div>
+            <!--  Termina Carousel-->
+        </div>
+
+        <div class="row mt-5 mb-5">
+            <!-- Empieza: Acerca de nosotros -->
+            <div class="acercanos_titulo" id="acercadenosotros">
+                <h2>Acerca de Nosotros</h2>
+            </div>
+            <div class="acercannos_enunciado">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dignissimos, aliquam cupiditate
+                    ea,
+                    quibusdam quaerat non facere beatae quis ab harum architecto nulla odit veniam iure reiciendis
+                    illum,
+                    numquam totam?
+                    Illum esse, ab dolor perspiciatis eaque tenetur laudantium perferendis reprehenderit, quia aut
+                    soluta
+                    quaerat rem quasi impedit minima sunt repellendus illo itaque adipisci in non, magni nam
+                    repudiandae
+                    id!
+                    Suscipit!
+                    Laborum voluptate maxime ducimus dolores, ratione delectus quaerat ipsa consequatur nesciunt a
+                    impedit
+                    aut
+                    modi labore, itaque eveniet nulla earum exercitationem! Quasi blanditiis nobis eos voluptatum
+                    aperiam
+                    consequuntur omnis beatae.</p>
+            </div>
+            <!--Termina: Acerca de nosotros-->
+        </div>
+        <div class="row footer">
+            <!-- Empieza: Footer -->
+            <div class="col footerIzq">
+                <ul>
+                    <li class="footer__iconos__izq">
+                        <a href="https://www.instagram.com/petit.bocatto"> <img class="logo_contacto_footer"
+                                src="multimedia/imagenes/instagram.png" alt=""></a>
+                    </li>
+                    <li class="footer__iconos__izq">
+                        <a href="https://www.facebook.com/petit.bocatto.7"> <img class="logo_contacto_footer"
+                                src="multimedia/imagenes/facebook.png" alt=""></a>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="col logoFooter">
+                <a href="#inicio"><img id="logo_petit_footer" src="multimedia/imagenes/logo.png" alt="" width=""></a>
+
+            </div>
+            <div class="col footerDer">
+                <ul>
+                    <li class="footer__iconos__der">
+                        <a href="https://goo.gl/maps/6eGbhzfFqPH5duuc7"> Corneille 4071 <img
+                                class="logo_contacto_footer" src="multimedia/imagenes/pin_mapa.png" alt="">
+                        </a>
+                    </li>
+                    <li class="footer__iconos__der">
+                        <a href="">091 999 999<img class="logo_contacto_footer"
+                                src="multimedia/imagenes/telefono-movil.png" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- Termina: Foorwe-->
+
+        </div>
+    </section>
+    <!-- BOOTSTRAP SEPARATE-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
