--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -8,30 +8,55 @@
     <!-- CSS-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
+    <!-- BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <div class="contenedor_padre_contacto">
-        <div class="header">
-            <div class="header_logo">
-                <img src="../multimedia/imagenes/logo.png" alt="">
-            </div>
 
-            <!-- Menú principal>-->
-            <nav class="header_menu">
-                <ul class="menu">
-                    <li class="menu_item"><a id="inicio" href="../index.html">Inicio</a></li>
-                    <li class="menu_item">
-                        <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                        <a href="../index.html#acercadenosotros">Acerca de Nosotros</a>
-                    </li>
-                    <li class="menu_item"> <a href="../paginas/galeria.html">Galeria de Trabajos</a></li>
-                    <li class="menu_item"><a href="../paginas/productos.html">Productos</a></li>
-                    <li class="menu_item"><a href="../paginas/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-            <!-- Cierre del Menú-->
+
+    <div class="header">
+
+        <div class="header_logo">
+            <img src="/multimedia/imagenes/logo.png" alt="">
         </div>
+        <!-- NAV BAR -->
+
+
+        <nav class="navbar navbar-expand-lg navbar-light navbar-left header_menu" style="justify-content: flex-end">
+            <div class="container-fluid" style="justify-content: flex-end">
+
+                <button class="navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav menu d-flex justify-content-right">
+                        <!-- <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li> -->
+                        <li class="menu_item"><a id="inicio" href="../index.html">Inicio</a></li>
+                        <li class="menu_item">
+                            <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
+                            <a href="#acercadenosotros">Acerca de Nosotros</a>
+                        </li>
+                        <li class="menu_item"> <a href="galeria.html">Galeria de Trabajos</a></li>
+                        <li class="menu_item"><a href="productos.html">Productos</a></li>
+                        <li class="menu_item"><a href="contacto.html">Contacto</a></li>
+
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- TERMINA EL NAV BAR-->
+    </div>
+    <div class="contenedor_padre_contacto">
+
         <div class="contenedor_contacto">
             <div class="contendor_titulo">
                 <div class="pagina__titulo">
@@ -114,6 +139,14 @@
         <!--termina el footer-->
 
     </div>
+    <!-- BOOTSTRAP SEPARATE-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
+
 
 </html>
