--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
             <img src="multimedia/imagenes/logo.png" alt="">
         </div>
         <!-- NAV BAR -->
-
-
         <nav class="navbar navbar-expand-lg navbar-light navbar-left header_menu" style="justify-content: flex-end">
             <div class="container-fluid" style="justify-content: flex-end">
 
@@ -57,8 +55,8 @@
     </div>
     <section class="container">
 
-        <div class="pagina__titulo">
-            <div class="titulo">
+        <div class="row pagina__titulo">
+            <div class="col titulo">
                 <h1>Bienvenidos a <p class="letra_logo" style="font-size: 5rem;">Petit Bocatto</p>
                 </h1>
             </div>
@@ -98,68 +96,92 @@
             <!--  Termina Carousel-->
         </div>
 
-        <div class="row mt-5 mb-5">
-            <!-- Empieza: Acerca de nosotros -->
-            <div class="acercanos_titulo" id="acercadenosotros">
-                <h2>Acerca de Nosotros</h2>
+        <!--Comienza: Acerca de nosotros-->
+        <div class="card m-2">
+            <div class="row g-0">
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h2 class="acercanos_titulo" id="acercadenosotros"> Acerca de Nosotros </h2>
+                        <p class=" card-text">Somos una familia emprendedora! El amor por los dulces era tal, que
+                            un día decidimos estudiar para poder hacer por nuestras propias manos la mesa de
+                            dulces de los cumples de nuestros peques. Nuestros invitados quedaron tan contentos
+                            con el resultado que poco a poco nos empezaron a hacer pedidos, y así nos embarcamos
+                            en este viaje tan tan lindo que nos llena el alma: Petit Bocatto.</p>
+
+                    </div>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img src="/multimedia/imagenes/familia.jpeg" class="img-fluid rounded-start" alt="...">
+                </div>
             </div>
-            <div class="acercannos_enunciado">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dignissimos, aliquam cupiditate
-                    ea,
-                    quibusdam quaerat non facere beatae quis ab harum architecto nulla odit veniam iure reiciendis
-                    illum,
-                    numquam totam?
-                    Illum esse, ab dolor perspiciatis eaque tenetur laudantium perferendis reprehenderit, quia aut
-                    soluta
-                    quaerat rem quasi impedit minima sunt repellendus illo itaque adipisci in non, magni nam
-                    repudiandae
-                    id!
-                    Suscipit!
-                    Laborum voluptate maxime ducimus dolores, ratione delectus quaerat ipsa consequatur nesciunt a
-                    impedit
-                    aut
-                    modi labore, itaque eveniet nulla earum exercitationem! Quasi blanditiis nobis eos voluptatum
-                    aperiam
-                    consequuntur omnis beatae.</p>
-            </div>
+
             <!--Termina: Acerca de nosotros-->
         </div>
+        <!--comienza el footer-->
         <div class="row footer">
             <!-- Empieza: Footer -->
-            <div class="col footerIzq">
-                <ul>
-                    <li class="footer__iconos__izq">
-                        <a href="https://www.instagram.com/petit.bocatto"> <img class="logo_contacto_footer"
-                                src="multimedia/imagenes/instagram.png" alt=""></a>
-                    </li>
-                    <li class="footer__iconos__izq">
-                        <a href="https://www.facebook.com/petit.bocatto.7"> <img class="logo_contacto_footer"
-                                src="multimedia/imagenes/facebook.png" alt=""></a>
-                    </li>
+            <footer class="text-center text-white" style="background-color: #f1f1f1;">
+                <!-- Grid container -->
+                <div class="container pt-4">
+                    <!-- Section: Social media -->
+                    <div class="row mb-4">
 
-                </ul>
-            </div>
-            <div class="col logoFooter">
-                <a href="#inicio"><img id="logo_petit_footer" src="multimedia/imagenes/logo.png" alt="" width=""></a>
+                        <div class="col">
+                            <div class="row">
+                                <!-- LOGO FACEBOOK -->
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                    href="https://www.facebook.com/petit.bocatto.7" role="button"
+                                    data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                        src="multimedia/imagenes/facebook.png" alt=""></a>
 
-            </div>
-            <div class="col footerDer">
-                <ul>
-                    <li class="footer__iconos__der">
-                        <a href="https://goo.gl/maps/6eGbhzfFqPH5duuc7"> Corneille 4071 <img
-                                class="logo_contacto_footer" src="multimedia/imagenes/pin_mapa.png" alt="">
-                        </a>
-                    </li>
-                    <li class="footer__iconos__der">
-                        <a href="">091 999 999<img class="logo_contacto_footer"
-                                src="multimedia/imagenes/telefono-movil.png" alt="">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <!-- Termina: Foorwe-->
+                                </a>
+                            </div>
+                            <div class="row">
+                                <!-- LOGO INSTAGRAM -->
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                    href="https://www.instagram.com/petit.bocatto" role="button"
+                                    data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                        src="multimedia/imagenes/instagram.png" alt=""></img></a>
+
+                            </div>
+
+                        </div>
+                        <div class="col d-flex ">
+                            <div class="row ">
+                                <!-- LOGO PETIT BOCATTO - FOOTER -->
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
+                                    href="../index.html" role="button" data-mdb-ripple-color="dark"><img
+                                        id="logo_petit_footer" src="multimedia/imagenes/logo.png" alt=""></a>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <!-- LOGO MAPS -->
+                            <div class="row">
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                    href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
+                                    data-mdb-ripple-color="dark">Corneille 4071 <img class="logo_contacto_footer"
+                                        src="multimedia/imagenes/pin_mapa.png" alt=""></a>
+
+
+                            </div>
+                            <div class="row">
+                                <!-- LOGO TELEFONO -->
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="#!" role="button"
+                                    data-mdb-ripple-color="dark">091 999 999<img class="logo_contacto_footer"
+                                        src="multimedia/imagenes/telefono-movil.png" alt=""></a>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+            </footer>
+            <!-- Termina: Footer-->
 
         </div>
+        <!--termina el footer-->
+
     </section>
     <!-- BOOTSTRAP SEPARATE-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
