--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -8,10 +8,10 @@
     <!-- CSS-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Productos</title>
-      <!-- BOOTSTRAP-->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
- 
+    <!-- BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -54,7 +54,7 @@
         <!-- TERMINA EL NAV BAR-->
     </div>
     <div class="contenedor_padre_productos">
-       
+
 
         <div class="contenedor_productos">
             <div class="pagina__titulo">
@@ -142,55 +142,78 @@
 
         </div>
 
-        <div class="footer">
-            <!--comienza el footer-->
-            <div class="footer-container">
-                <div class="footerIzq">
-                    <ul>
-                        <li class="footer__iconos__izq">
-                            <a href="https://www.instagram.com/petit.bocatto"> <img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/instagram.png" alt=""></a>
-                        </li>
-                        <li class="footer__iconos__izq">
-                            <a href="https://www.facebook.com/petit.bocatto.7"> <img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/facebook.png" alt=""></a>
-                        </li>
+        <!-- Comienza: FOOTER -->
 
-                    </ul>
-                </div>
-                <!-- Logo que va centrado en el pie de pagina-->
-                <div class="logoFooter">
-                    <a href="../index.html"><img id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt=""
-                            width=""></a>
+        <div class="row footer">
+            <!-- Empieza: Footer -->
+            <footer class="text-center text-white" style="background-color: #f1f1f1;">
+                <!-- Grid container -->
+                <div class="container pt-4">
+                    <!-- Section: Social media -->
+                    <div class="row mb-4">
 
-                </div>
-                <div class="footerDer">
-                    <ul>
-                        <li class="footer__iconos__der">
-                            <a href="https://goo.gl/maps/6eGbhzfFqPH5duuc7"> Corneille 4071 <img
-                                    class="logo_contacto_footer" src="../multimedia/imagenes/pin_mapa.png" alt="">
-                            </a>
-                        </li>
-                        <li class="footer__iconos__der">
-                            <a href="">091 999 999<img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/telefono-movil.png" alt="">
-                            </a>
-                        </li>
-                    </ul>
+                        <div class="col">
+                            <div class="row">
+                                <!-- LOGO FACEBOOK -->
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                    href="https://www.facebook.com/petit.bocatto.7" role="button"
+                                    data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                        src="../multimedia/imagenes/facebook.png" alt=""></a>
 
-                </div>
-            </div>
+                                </a>
+                            </div>
+                            <div class="row">
+                                <!-- LOGO INSTAGRAM -->
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                    href="https://www.instagram.com/petit.bocatto" role="button"
+                                    data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                        src="../multimedia/imagenes/instagram.png" alt=""></img></a>
 
+                            </div>
+
+                        </div>
+                        <div class="col d-flex ">
+                            <div class="row ">
+                                <!-- LOGO PETIT BOCATTO - FOOTER -->
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
+                                    href="../index.html" role="button" data-mdb-ripple-color="dark"><img
+                                        id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt=""></a>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <!-- LOGO MAPS -->
+                            <div class="row">
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                    href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
+                                    data-mdb-ripple-color="dark">Corneille 4071 <img class="logo_contacto_footer"
+                                        src="../multimedia/imagenes/pin_mapa.png" alt=""></a>
+
+
+                            </div>
+                            <div class="row">
+                                <!-- LOGO TELEFONO -->
+                                <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="#!" role="button"
+                                    data-mdb-ripple-color="dark">091 999 999<img class="logo_contacto_footer"
+                                        src="../multimedia/imagenes/telefono-movil.png" alt=""></a>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+            </footer>
 
         </div>
+        <!--termina el footer-->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
 </body>
 
