Segunda Entrega Proyecto Final

--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav menu d-flex justify-content-right">
-                        <!-- <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li> -->
+                      
                         <li class="menu_item"><a id="inicio" href="index.html">Inicio</a></li>
                         <li class="menu_item">
                             <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
@@ -53,7 +51,7 @@
 
         <!-- TERMINA EL NAV BAR-->
     </div>
-    <section class="container">
+    <div class="container">
 
         <div class="row pagina__titulo">
             <div class="col titulo">
@@ -182,7 +180,7 @@
         </div>
         <!--termina el footer-->
 
-    </section>
+    </div>
     <!-- BOOTSTRAP SEPARATE-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
