--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -33,15 +33,13 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav menu d-flex justify-content-right">
-                        <!-- <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li> -->
+                        
                         <li class="menu_item"><a id="inicio" href="../index.html">Inicio</a></li>
                         <li class="menu_item">
                             <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                            <a href="#acercadenosotros">Acerca de Nosotros</a>
+                            <a href="../index.html#acercadenosotros">Acerca de Nosotros</a>
                         </li>
                         <li class="menu_item"> <a href="galeria.html">Galeria de Trabajos</a></li>
                         <li class="menu_item"><a href="productos.html">Productos</a></li>
@@ -55,7 +53,6 @@
 
         <!-- TERMINA EL NAV BAR-->
     </div>
-
     
 
         <div class="container">
