--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -31,15 +31,13 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav menu d-flex justify-content-right">
-                        <!-- <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li> -->
+
                         <li class="menu_item"><a id="inicio" href="../index.html">Inicio</a></li>
                         <li class="menu_item">
                             <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                            <a href="#acercadenosotros">Acerca de Nosotros</a>
+                            <a href="../index.html#acercadenosotros">Acerca de Nosotros</a>
                         </li>
                         <li class="menu_item"> <a href="galeria.html">Galeria de Trabajos</a></li>
                         <li class="menu_item"><a href="productos.html">Productos</a></li>
@@ -53,160 +51,200 @@
 
         <!-- TERMINA EL NAV BAR-->
     </div>
-    <div class="contenedor_padre_productos">
 
-
-        <div class="contenedor_productos">
-            <div class="pagina__titulo">
+    <!--  CONTENIDO DE LOS PRODUCTOS-->
+    <!--  TITULO DE LA PAGINA -->
+    <div class="container">
+        <div class="contendor_titulo d-flex justify-content-center ">
+            <div class="pagina__titulo m-4 ">
                 <div>
-                    <h1>Productos</h1>
+                    <h1>Nuestros Productos</h1>
                 </div>
-            </div>
-            <div class="lista_productos">
-                <div class="producto">
-                    <div class="nombre-producto">
-                        <h3>Chajá clásico</h3>
-                    </div>
-                    <div class="producto_imagen">
-                        <img class="producto_imagen" src="../multimedia/imagenes/chaja-2.jpeg" alt="">
-                    </div>
-                    <div class="producto_descripcion">
-                        <p> Bicochuelo de vainilla, húmedecido con almibar de durazno. De relleno dulce de leche,
-                            trocitos de merengue y duraznos. Un postre fresco y dulce al mismo tiempo.</p>
-                    </div>
-                </div>
-                <div class="producto">
-                    <div class="producto_imagen">
-                        <img class="producto_imagen" src="../multimedia/imagenes/chaja-2.jpeg" alt="">
-                    </div>
-                    <div class="producto_descripcion">
-                        <p> Bicochuelo de vainilla, húmedecido con almibar de durazno. De relleno dulce de leche,
-                            trocitos de merengue y duraznos. Un postre fresco y dulce al mismo tiempo.</p>
-
-                    </div>
-                </div>
-                <div class="producto">
-                    <div class="producto_imagen">
-                        <img class="producto_imagen" src="../multimedia/imagenes/chaja-2.jpeg" alt="">
-                    </div>
-                    <div class="producto_descripcion">
-                        <p> Bicochuelo de vainilla, húmedecido con almibar de durazno. De relleno dulce de leche,
-                            trocitos de merengue y duraznos. Un postre fresco y dulce al mismo tiempo.</p>
-
-                    </div>
-                </div>
-                <div class="producto">
-                    <div class="producto_imagen">
-                        <img class="producto_imagen" src="../multimedia/imagenes/chaja-2.jpeg" alt="">
-                    </div>
-                    <div class="producto_descripcion">
-                        <p> Bicochuelo de vainilla, húmedecido con almibar de durazno. De relleno dulce de leche,
-                            trocitos de merengue y duraznos. Un postre fresco y dulce al mismo tiempo.</p>
-
-                    </div>
-                </div>
-                <div class="producto">
-                    <div class="producto_imagen">
-                        <img class="producto_imagen" src="../multimedia/imagenes/chaja-2.jpeg" alt="">
-                    </div>
-                    <div class="producto_descripcion">
-                        <p> Bicochuelo de vainilla, húmedecido con almibar de durazno. De relleno dulce de leche,
-                            trocitos de merengue y duraznos. Un postre fresco y dulce al mismo tiempo.</p>
-
-                    </div>
-                </div>
-                <div class="producto">
-                    <div class="producto_imagen">
-                        <img class="producto_imagen" src="../multimedia/imagenes/chaja-2.jpeg" alt="">
-                    </div>
-                    <div class="producto_descripcion">
-                        <p> Bicochuelo de vainilla, húmedecido con almibar de durazno. De relleno dulce de leche,
-                            trocitos de merengue y duraznos. Un postre fresco y dulce al mismo tiempo.</p>
-
-                    </div>
-                </div>
-                <div class="producto">
-                    <div class="producto_imagen">
-                        <img class="producto_imagen" src="../multimedia/imagenes/chaja-2.jpeg" alt="">
-                    </div>
-                    <div class="producto_descripcion">
-                        <p> Bicochuelo de vainilla, húmedecido con almibar de durazno. De relleno dulce de leche,
-                            trocitos de merengue y duraznos. Un postre fresco y dulce al mismo tiempo.</p>
-
-                    </div>
-                </div>
-
-
 
             </div>
-
         </div>
-
-        <!-- Comienza: FOOTER -->
-
-        <div class="row footer">
-            <!-- Empieza: Footer -->
-            <footer class="text-center text-white" style="background-color: #f1f1f1;">
-                <!-- Grid container -->
-                <div class="container pt-4">
-                    <!-- Section: Social media -->
-                    <div class="row mb-4">
-
-                        <div class="col">
-                            <div class="row">
-                                <!-- LOGO FACEBOOK -->
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
-                                    href="https://www.facebook.com/petit.bocatto.7" role="button"
-                                    data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                        src="../multimedia/imagenes/facebook.png" alt=""></a>
-
-                                </a>
-                            </div>
-                            <div class="row">
-                                <!-- LOGO INSTAGRAM -->
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
-                                    href="https://www.instagram.com/petit.bocatto" role="button"
-                                    data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                        src="../multimedia/imagenes/instagram.png" alt=""></img></a>
-
-                            </div>
-
+        <!--  COMIENZAN LAS CARDS DE PRODUCTOS-->
+        <div class="contenedor_padre_productos d-flex justify-content-center  flex-nowwrap">
+            <div class="row row-cols-1 row-cols-md-3 g-4 w-75">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/chees_cake.webp" class="card-img-top"
+                            alt="cheese cake frutillas">
+                        <div class="card-body">
+                            <h5 class="card-title">Cheese Cake Clásico</h5>
+                            <p class="card-text">El preferidos de muchos: base de galletitas de vainillas molidas,
+                                relleno
+                                de queso crema liviano y una deliciosa capa de mermelada casera de frutillas. Como
+                                decoración de este delicado postre no podrían faltar unas flores talladas en frutillas.
+                            </p>
                         </div>
-                        <div class="col d-flex ">
-                            <div class="row ">
-                                <!-- LOGO PETIT BOCATTO - FOOTER -->
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
-                                    href="../index.html" role="button" data-mdb-ripple-color="dark"><img
-                                        id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt=""></a>
-
-                            </div>
-                        </div>
-                        <div class="col">
-                            <!-- LOGO MAPS -->
-                            <div class="row">
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
-                                    href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
-                                    data-mdb-ripple-color="dark">Corneille 4071 <img class="logo_contacto_footer"
-                                        src="../multimedia/imagenes/pin_mapa.png" alt=""></a>
-
-
-                            </div>
-                            <div class="row">
-                                <!-- LOGO TELEFONO -->
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="#!" role="button"
-                                    data-mdb-ripple-color="dark">091 999 999<img class="logo_contacto_footer"
-                                        src="../multimedia/imagenes/telefono-movil.png" alt=""></a>
-
-                            </div>
-                        </div>
-
                     </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/chaja.webp" class="card-img-top" alt="postre chajá">
+                        <div class="card-body">
+                            <h5 class="card-title">Postre Chajá</h5>
+                            <p class="card-text">Bizcochuelo de vainilla, húmedecido con almibar de durazno. Consta con
+                                2
+                                capas de relleno, una de dulce de
+                                leche y otra con crema chantilly y duraznos. Cubierto con trocitos de meregue crocante y
+                                más
+                                duraznos en forma de flor.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/diamanta.webp" class="card-img-top"
+                            alt="Postre Diamanta">
+                        <div class="card-body">
+                            <h5 class="card-title">Postre Diamanta</h5>
+                            <p class="card-text">Un postre liviano, formado por una capa de mouse de chocolate y otra de
+                                mouse de dulce de leche. Forrado con plantillas y por encima una generosa capa de
+                                merengue
+                                suizo.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/ferrero_roger.webp" class="card-img-top"
+                            alt="Postre Ferrero Rocher">
+                        <div class="card-body">
+                            <h5 class="card-title">Postre Ferrero Rocher</h5>
+                            <p class="card-text">Bizcocuelo con doble relleno, una capa de ganche de chocolate y otra de
+                                mouse de dulce de leche. Cubierto en su totalidad con crema de nutela, con un baño de
+                                chocolate que se deja caer por sus laterales, terminando la decoración con flores en
+                                forma de nutela y bombones Ferrero Rocher.</p>
 
-            </footer>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/lemon_pie.webp" class="card-img-top" alt="Lemon Pie">
+                        <div class="card-body">
+                            <h5 class="card-title">Lemon Pié</h5>
+                            <p class="card-text">Base de galletitas molidas de vainilla, una generosa capa de mouse de
+                                limón y por encima una basta dulce capa de merengue suizo.</p>
 
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/flores_de_azucar.webp" class="card-img-top"
+                            alt="Torta forrada con azúcar">
+                        <div class="card-body">
+                            <h5 class="card-title">Delicada torta forrada en azúcar</h5>
+                            <p class="card-text">Bizcocuelo de vainilla con doble relleno de dulce de leche. Cubierta
+                                con ganache de chocolate y decorada con fondant. Acompañando la delicada decoración se
+                                luce una flor artenasanal hecha en su totalidad de azúcar.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/galletitas.webp" class="card-img-top"
+                            alt="Galletitas en forma de corazon forradas en fondant">
+                        <div class="card-body">
+                            <h5 class="card-title">Galletitas Temáticas</h5>
+                            <p class="card-text">Galletitas de manteca forradas en fondant. Ideales para personalizar tu
+                                mesa de dulces o souvenirs!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/mujermaravilla.webp" class="card-img-top"
+                            alt="Torta motivo mujer maravilla">
+                        <div class="card-body">
+                            <h5 class="card-title">Torta temáticas para tu fiesta</h5>
+                            <p class="card-text">Realizamos la torta que tu sueñes, sabor de bizcochuelo, relleno y
+                                cobertura.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../multimedia/imagenes/cards/boxes.webp" class="card-img-top"
+                            alt="Boxes sorpresa desayuno merienda">
+                        <div class="card-body">
+                            <h5 class="card-title">Boxes sorpresa</h5>
+                            <p class="card-text">Contamos con varios tipos de Boxes Sorpresa ya sea para desayuno o
+                                merienda. Motivos: Día del Niño, Día del Padre o Madre, Aniversarios y mucho más!
+                                Escribinos para consultarnos las diferentes opciones. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!--termina el footer-->
     </div>
+    <!-- Comienza: FOOTER -->
+    <div class="row footer">
+
+        <footer class="text-center text-white" style="background-color: #f1f1f1;">
+            <!-- Grid container -->
+            <div class="container pt-4">
+                <!-- Section: Social media -->
+                <div class="row mb-4">
+
+                    <div class="col">
+                        <div class="row">
+                            <!-- LOGO FACEBOOK -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                href="https://www.facebook.com/petit.bocatto.7" role="button"
+                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/facebook.png" alt=""></a>
+
+                            </a>
+                        </div>
+                        <div class="row">
+                            <!-- LOGO INSTAGRAM -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                href="https://www.instagram.com/petit.bocatto" role="button"
+                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/instagram.png" alt=""></img></a>
+
+                        </div>
+
+                    </div>
+                    <div class="col d-flex ">
+                        <div class="row ">
+                            <!-- LOGO PETIT BOCATTO - FOOTER -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
+                                href="../index.html" role="button" data-mdb-ripple-color="dark"><img
+                                    id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt=""></a>
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <!-- LOGO MAPS -->
+                        <div class="row">
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
+                                data-mdb-ripple-color="dark">Corneille 4071 <img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/pin_mapa.png" alt=""></a>
+
+
+                        </div>
+                        <div class="row">
+                            <!-- LOGO TELEFONO -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="#!" role="button"
+                                data-mdb-ripple-color="dark">091 999 999<img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/telefono-movil.png" alt=""></a>
+
+                        </div>
+                    </div>
+
+                </div>
+
+        </footer>
+
+    </div>
+    <!--termina el footer-->
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
