redireccion correcta al index

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta property="og:title" content="Bienvenidos al mundo de los postres Petit Bocatto">
     <meta property="og:description"
         content="Hacemos postres, tortas, mesas dulces para eventos, galletitas personalizadas, cajas meriendas y desayuno sorpresa.">
-    <meta property=="og:url" content="https://petitbocatto1.000webhostapp.com/">
-    <meta property=="og:image"
+    <meta property="og:url" content="https://petitbocatto1.000webhostapp.com/">
+    <meta property="og:image"
         content="https://petitbocatto1.000webhostapp.com/src/multimedia/imagenes/bombon-choco50.jpeg">
 
     <!-- FAVICON -->
@@ -39,12 +39,12 @@
     <div class="header">
 
         <div id="logo_menu2" class="header_logo">
-            <img  src="./src/multimedia/imagenes/logo.png" alt="Logo Petit Bocatto">
+            <img src="./src/multimedia/imagenes/logo.png" alt="Logo Petit Bocatto">
         </div>
         <!-- NAV BAR -->
         <nav class="navbar navbar-expand-lg navbar-light header_menu" style="justify-content: flex-end">
             <div class="container-fluid" style="justify-content: flex-end">
-             
+
                 <button class="navbar-toggler  navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -144,7 +144,7 @@
     </div>
 
     <!--comienza el footer-->
-    <div id="footer_contenido"class="row footer mt-5">
+    <div id="footer_contenido" class="row footer mt-5">
         <!-- Empieza: Footer -->
         <footer class="text-center text-white" style="background-color: #f1f1f1;">
             <!-- Grid container -->
@@ -160,14 +160,14 @@
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
                                     src="./src/multimedia/imagenes/facebook.png" alt="Logo facebook"></a>
 
-                            </a>
+
                         </div>
                         <div class="row">
                             <!-- LOGO INSTAGRAM -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://www.instagram.com/petit.bocatto" role="button"
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="./src/multimedia/imagenes/instagram.png" alt="Logo Instagram"></img></a>
+                                    src="./src/multimedia/imagenes/instagram.png" alt="Logo Instagram"></a>
 
                         </div>
                         <!-- LOGO MAPS -->
@@ -182,8 +182,8 @@
                         </div>
                         <div class="row">
                             <!-- LOGO TELEFONO -->
-                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="tel:+34000000000" role="button"
-                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="tel:+34000000000"
+                                role="button" data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
                                     src="./src/multimedia/imagenes/telefono-movil.png"
                                     alt="Logo contacto telefónico"></a>
 
@@ -200,9 +200,9 @@
 
                         </div>
                     </div>
-                    
 
                 </div>
+            </div>
 
         </footer>
         <!-- Termina: Footer-->
