--- a/src/paginas/galeria.html
+++ b/src/paginas/galeria.html
@@ -61,7 +61,7 @@
         <div class="row mb-5">
             <div class="pagina__titulo">
                 <div>
-                    <h1>Galeria de Trabajos</h1>
+                    <h1>Galeria de nuestros mejores Petit Bocattos</h1>
                 </div>
             </div>
         </div>
@@ -124,8 +124,8 @@
     </section>
 
 
-     <!--comienza el footer-->
-     <div id="footer_contenido"class="row footer mt-5">
+    <!--comienza el footer-->
+    <div id="footer_contenido" class="row footer mt-5">
         <!-- Empieza: Footer -->
         <footer class="text-center text-white" style="background-color: #f1f1f1;">
             <!-- Grid container -->
@@ -141,14 +141,14 @@
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
                                     src="../multimedia/imagenes/facebook.png" alt="Logo facebook"></a>
 
-                            </a>
+
                         </div>
                         <div class="row">
                             <!-- LOGO INSTAGRAM -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://www.instagram.com/petit.bocatto" role="button"
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/instagram.png" alt="Logo Instagram"></img></a>
+                                    src="../multimedia/imagenes/instagram.png" alt="Logo Instagram"></a>
 
                         </div>
                         <!-- LOGO MAPS -->
@@ -156,17 +156,15 @@
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/pin_mapa.png"
-                                    alt="Logo pin de ubicación en mapa"></a>
+                                    src="../multimedia/imagenes/pin_mapa.png" alt="Logo pin de ubicación en mapa"></a>
 
 
                         </div>
                         <div class="row">
                             <!-- LOGO TELEFONO -->
-                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="tel:+34000000000" role="button"
-                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/telefono-movil.png"
-                                    alt="Logo contacto telefónico"></a>
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="tel:+34000000000"
+                                role="button" data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/telefono-movil.png" alt="Logo contacto telefónico"></a>
 
                         </div>
 
@@ -181,18 +179,20 @@
 
                         </div>
                     </div>
-                    
-
                 </div>
 
+            </div>
+
         </footer>
-        <!-- Termina: Footer-->
+    </div>
+    <!-- Termina: Footer-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
