--- a/src/paginas/contacto.html
+++ b/src/paginas/contacto.html
@@ -62,7 +62,7 @@
             <div class="contendor_titulo">
                 <div class="pagina__titulo">
                     <div>
-                        <h1>Quiero mi presupuesto</h1>
+                        <h1>Quiero mi presupuesto a medida</h1>
                     </div>
 
                 </div>
@@ -111,7 +111,7 @@
 
     </div>
     <!--comienza el footer-->
-    <div id="footer_contenido"class="row footer mt-5">
+    <div id="footer_contenido" class="row footer mt-5">
         <!-- Empieza: Footer -->
         <footer class="text-center text-white" style="background-color: #f1f1f1;">
             <!-- Grid container -->
@@ -127,14 +127,13 @@
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
                                     src="../multimedia/imagenes/facebook.png" alt="Logo facebook"></a>
 
-                            </a>
                         </div>
                         <div class="row">
                             <!-- LOGO INSTAGRAM -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://www.instagram.com/petit.bocatto" role="button"
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/instagram.png" alt="Logo Instagram"></img></a>
+                                    src="../multimedia/imagenes/instagram.png" alt="Logo Instagram"></a>
 
                         </div>
                         <!-- LOGO MAPS -->
@@ -142,17 +141,15 @@
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/pin_mapa.png"
-                                    alt="Logo pin de ubicación en mapa"></a>
+                                    src="../multimedia/imagenes/pin_mapa.png" alt="Logo pin de ubicación en mapa"></a>
 
 
                         </div>
                         <div class="row">
                             <!-- LOGO TELEFONO -->
-                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="tel:+34000000000" role="button"
-                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/telefono-movil.png"
-                                    alt="Logo contacto telefónico"></a>
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="tel:+34000000000"
+                                role="button" data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/telefono-movil.png" alt="Logo contacto telefónico"></a>
 
                         </div>
 
@@ -167,14 +164,14 @@
 
                         </div>
                     </div>
-                    
 
                 </div>
+            </div>
 
         </footer>
         <!-- Termina: Footer-->
 
-
+    </div>
     <!-- BOOTSTRAP SEPARATE-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
