redireccion logo footer y seccion acerca de nos

--- a/src/paginas/productos.html
+++ b/src/paginas/productos.html
@@ -35,10 +35,10 @@
                 <div class="collapse navbar-collapse justify-content-center panelmenu" id="navbarNav">
                     <ul class="navbar-nav menu d-flex justify-content-right">
 
-                        <li class="menu_item"><a id="inicio" href="/index.html">Inicio</a></li>
+                        <li class="menu_item"><a id="inicio" href="../../index.html">Inicio</a></li>
                         <li class="menu_item">
                             <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                            <a href="/index.html#acercadenosotros">Acerca de Nosotros</a>
+                            <a href="../../index.html#acercadenosotros">Acerca de Nosotros</a>
                         </li>
                         <li class="menu_item"> <a href="../paginas/galeria.html">Galeria de Trabajos</a></li>
                         <li class="menu_item"><a class="active_menu" href="../paginas/productos.html">Productos</a></li>
@@ -229,11 +229,12 @@
                         </div>
 
                     </div>
+                    
                     <div class="col-lg-6 col-md-6 mb-0 mb-md-0">
                         <div class="row ">
                             <!-- LOGO PETIT BOCATTO - FOOTER -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
-                                href="/index.html" role="button" data-mdb-ripple-color="dark"><img
+                                href="../../index.html" role="button" data-mdb-ripple-color="dark"><img
                                     id="logo_petit_footer" src="../multimedia/imagenes/logo.png"
                                     alt="Logo Petit Bocatto"></a>
 
