--- a/src/paginas/contacto.html
+++ b/src/paginas/contacto.html
@@ -37,10 +37,10 @@
                 <div class="collapse navbar-collapse justify-content-center panelmenu" id="navbarNav">
                     <ul class="navbar-nav menu d-flex justify-content-right">
 
-                        <li class="menu_item"><a id="inicio" href="/index.html">Inicio</a></li>
+                        <li class="menu_item"><a id="inicio" href="../../index.html">Inicio</a></li>
                         <li class="menu_item">
                             <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                            <a href="/index.html#acercadenosotros">Acerca de Nosotros</a>
+                            <a href="../../index.html#acercadenosotros">Acerca de Nosotros</a>
                         </li>
                         <li class="menu_item"> <a href="../paginas/galeria.html">Galeria de Trabajos</a></li>
                         <li class="menu_item"><a href="../paginas/productos.html">Productos</a></li>
@@ -158,7 +158,7 @@
                         <div class="row ">
                             <!-- LOGO PETIT BOCATTO - FOOTER -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
-                                href="/index.html" role="button" data-mdb-ripple-color="dark"><img
+                                href="../../index.html" role="button" data-mdb-ripple-color="dark"><img
                                     id="logo_petit_footer" src="../multimedia/imagenes/logo.png"
                                     alt="Logo Petit Bocatto"></a>
 
